Deployment/backendservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendservice  
spec:
  selector:
    matchLabels:
      app: backendservice
  template:
    metadata:
      labels:
        app: backendservice
    spec:
      volumes:
      - name: secrets-store-backendservice
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kvname-podid"    
      containers:
        - name: backendservice
          image: $ACRNAME.azurecr.io/$IMAGE
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
              - name: secrets-store-backendservice
                mountPath: "/mnt/secrets-store"
                readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: backendservice
  labels:
    app: backendservice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: backendservice
