Deployment/partnerapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: partnerapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: partnerapi
  template:
    metadata:
      labels:
        app: partnerapi
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: partnerapi-dotfile-secret
      - name: secrets-store-partnerapi
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kvname-podid"
      containers:
      - name: partnerapi
        image: $ACRNAME.azurecr.io/contoso-demo-partner-api:$VERSION
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
        volumeMounts:
            - name: secret-volume
              readOnly: true
              mountPath: "/etc/secret-volume"
            - name: secrets-store-partnerapi
              mountPath: "/mnt/secrets-store"
              readOnly: true
        livenessProbe:
          httpGet:
            path: /health
            port: 80
        readinessProbe:
          httpGet:
            path: /health
            port: 80              
---
apiVersion: v1
kind: Service
metadata:
  name: partnerapi
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: partnerapi
