Deployment/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress  
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"    
spec:
  tls:
  - hosts:
    - $DOMAINNAME
    secretName: aks-ingress-tls
  rules:
  - host: $DOMAINNAME
    http:
      paths:
      - backend:
          service:
            name: customerservice
            port:
              number: 80
        path: /(.*)
        pathType: Prefix
      - backend:
          service:
            name: memberservice
            port:
              number: 80
        path: /members/(.*)
        pathType: Prefix
      - backend:
          service:
            name: pointsservice
            port:
              number: 80
        path: /points/(.*)
        pathType: Prefix
      - backend:
          service:
            name: partnerapi
            port:
              number: 80
        path: /partner/(.*)
        pathType: Prefix
      - backend:
          service:
              name: prometheus-server
              port:
                  number: 9090
        path: /prom/(.*)
        pathType: Prefix
